--- a/css/agency.css
+++ b/css/agency.css
@@ -36,7 +36,9 @@ body {
     display: none;
   }
   #heading{
-    margin-top: 0px;
+    margin-top: -35px;
+    font-size: 100%;
+    margin-bottom: -35px;
   }
   #feat11{
     display:block;
@@ -66,6 +68,8 @@ body {
     display:block;
     margin-left: 10px;
     margin-right: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 #quantity{
   margin-left: 2px;
@@ -174,11 +178,12 @@ font-size: 200%;
   z-index: -1;
   margin-left: -15px;
   padding-left: 15px;
+  margin-top: 10px;
   padding-top: 5px;
   padding-bottom: 5px;
-  padding-right: 5px;
+  padding-right: 13px;
   background-color: #9d44de;
-  width: 220px;
+  width: 215px;
 }
 
 .patch2
@@ -186,13 +191,15 @@ font-size: 200%;
   left:40px;
   font-size: 100%;
   color: white;
+  z-index: -1;
   margin-left: -15px;
   padding-left: 15px;
+  margin-top: 10px;
   padding-top: 5px;
   padding-bottom: 5px;
-  padding-right: 5px;
+  padding-right: 48px;
   background-color: #9d44de;
-  width: 220px;
+  width: 215px;
 }
 
 .patch3
@@ -200,13 +207,15 @@ font-size: 200%;
   left:40px;
   font-size: 100%;
   color: white;
+  z-index: -1;
   margin-left: -15px;
   padding-left: 15px;
+  margin-top: 10px;
   padding-top: 5px;
   padding-bottom: 5px;
-  padding-right: 5px;
+  padding-right: 29px;
   background-color: #9d44de;
-  width: 220px;
+  width: 215px;
 }
 
 .patch4
@@ -214,13 +223,15 @@ font-size: 200%;
   left:40px;
   font-size: 100%;
   color: white;
+  z-index: -1;
   margin-left: -15px;
   padding-left: 15px;
+  margin-top: 10px;
   padding-top: 5px;
   padding-bottom: 5px;
-  padding-right: 5px;
+  padding-right: 90px;
   background-color: #9d44de;
-  width: 220px;
+  width: 215px;
 }
 
 .patch5
@@ -228,13 +239,15 @@ font-size: 200%;
   left:40px;
   font-size: 100%;
   color: white;
+  z-index: -1;
   margin-left: -15px;
   padding-left: 15px;
+  margin-top: 10px;
   padding-top: 5px;
   padding-bottom: 5px;
-  padding-right: 5px;
+  padding-right: 25px;
   background-color: #9d44de;
-  width: 220px;
+  width: 215px;
 }
 
 .patch6
@@ -242,13 +255,15 @@ font-size: 200%;
   left:40px;
   font-size: 100%;
   color: white;
+  z-index: -1;
   margin-left: -15px;
   padding-left: 15px;
+  margin-top: 10px;
   padding-top: 5px;
   padding-bottom: 5px;
-  padding-right: 5px;
+  padding-right: 47px;
   background-color: #9d44de;
-  width: 220px;
+  width: 215px;
 }
 
 .brand
