--- a/css/agency.css
+++ b/css/agency.css
@@ -30,38 +30,55 @@ body {
   display:none;
 }
 
+.row.no-gutter {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.row.no-gutter [class*='col-']:not(:first-child),
+.row.no-gutter [class*='col-']:not(:last-child) {
+  padding-right: 0;
+  padding-left: 0;
+}
+
 @media screen and (max-width: 600px)
 {
   #space1{
     display: none;
   }
   #heading{
-    margin-top: -35px;
-    font-size: 100%;
+    margin-top: -65px;
+    font-size: 50%;
   }
   #feat11{
     display:block;
-    padding-left: 80px;
+    text-align: center;
+    padding-bottom: 15px;
   }
   #feat21{
     display:block;
-    padding-left: 80px;
+    text-align: center;
+    padding-bottom: 15px;
   }
   #feat31{
     display: block;
-    padding-left: 80px;
+    text-align: center;
+    padding-bottom: 15px;
   }
   #feat41{
     display: block;
-    padding-left: 80px;
+    text-align: center;
+    padding-bottom: 15px;
   }
   #feat51{
     display: block;
-    padding-left: 80px;
+    text-align: center;
+    padding-bottom: 15px;
   }
   #feat61{
     display: block;
-    padding-left: 80px;
+    text-align: center;
+    padding-bottom: 15px;
   }
   #foot1{
     display:block;
@@ -115,9 +132,7 @@ text-color:black;
 }
 
 #quantity{
-  margin-top: 3px;
 width : 50%;
-border-radius: 5px;
 }
 
 .modal-dialog {
@@ -291,35 +306,12 @@ font-size: 200%;
     display: block;
     width: 250%
 }
-@media (min-width: 768px) {
-    .tmt-desktop {
-        margin-top:40px;
-        display: block;
-        width: 100%;
-    }
-    .tmt-mobile {
-        display:None;
-    }
-}
-
-
-
-
 
 .career-desktop {
     display: None;
 }
 .career-mobile {
     display: block;
-}
-@media (min-width: 768px) {
-    .career-desktop {
-        margin-top:40px;
-        display: block;
-    }
-    .career-mobile {
-        display:None;
-    }
 }
 
 
@@ -339,14 +331,6 @@ font-size: 200%;
     margin-top: 40px;
 }
 
-@media (min-width: 768px) {
-    .icon-row{
-        margin-top: 80px;
-    }
-    .icon-mob-row{
-        margin-top:0px;
-    }
-}
 
 .mobile-show{
     display: block;
@@ -354,15 +338,6 @@ font-size: 200%;
 .desktop-show{
     display: None;
 }
-@media (min-width: 768px) {
-    .mobile-show{
-        display: none;
-    }
-    .desktop-show{
-        display: block;
-    }
-}
-
 
 p {
   font-size: 14px;
@@ -615,37 +590,7 @@ fieldset[disabled] .btn-xl.active {
   color: white;
   background-color: #18bbff;
 }
-@media (min-width: 768px) {
-  .navbar-default {
-    background-color: transparent;
-    padding: 25px 0;
-    -webkit-transition: padding 0.3s;
-    -moz-transition: padding 0.3s;
-    transition: padding 0.3s;
-    border: none;
-  }
-  .navbar-default .navbar-brand {
-    font-size: 2em;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    transition: all 0.3s;
-    padding: 5px;
-  }
-  .navbar-default .navbar-nav > .active > a {
-    border-radius: 3px;
-  }
-  .navbar-default.navbar-shrink {
-    background-color: #9d44de;
-    padding: 11px 0px 0px 0px;
-  }
-  .navbar-default.navbar-shrink .navbar-brand {
-    font-size: 1.5em;
-  }
-  .navbar-nav > li > a {
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
-}
+
 header {
   background-image: url('../img/main-section_mob.jpg');
   background-repeat: none;
@@ -673,35 +618,6 @@ header2 {
   text-align: center;
   color: white;
 }
-@media (min-width: 768px) {
-    header {
-          background-image: url('../img/main-section4.jpg');
-          background-repeat: none;
-          background-attachment: scroll;
-          background-position: center center;
-          background-color: #9d44de;
-          -webkit-background-size: cover;
-          -moz-background-size: cover;
-          background-size: cover;
-          -o-background-size: cover;
-          text-align: center;
-          color: white;
-    }
-    header#career {
-          background-image: url('../img/career.jpg');
-          background-repeat: none;
-          background-attachment: scroll;
-          background-position: center center;
-          background-color: #9d44de;
-          -webkit-background-size: cover;
-          -moz-background-size: cover;
-          background-size: cover;
-          -o-background-size: cover;
-          text-align: center;
-          color: white;
-    }
-}
-
 header-image {
     width: 1008px;
     height:360px;
@@ -725,26 +641,6 @@ header .intro-text .intro-heading {
   font-size: 19px;
   line-height: 30px;
 }
-@media (min-width: 768px) {
-  header .intro-text {
-    padding-top: 150px;
-    padding-bottom: 550px;
-  }
-  header .intro-text .intro-lead-in {
-    font-style: italic;
-    font-size: 40px;
-    line-height: 40px;
-    margin-bottom: 25px;
-  }
-  header .intro-text .intro-heading {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: 25px;
-    line-height: 45px;
-    margin-bottom: 50px;
-  }
-}
 
 section {
   padding: 100px 0;
@@ -767,11 +663,6 @@ section h3.section-subheading-contact {
   text-transform: none;
   font-style: italic;
   font-weight: 400;
-}
-@media (min-width: 768px) {
-  section {
-    padding: 100px 0;
-  }
 }
 .service-heading {
   margin: 15px 30px;
@@ -836,11 +727,6 @@ section h3.section-subheading-contact {
 }
 #portfolio * {
   z-index: 2;
-}
-@media (min-width: 767px) {
-  #portfolio .portfolio-item {
-    margin: 0 0 30px;
-  }
 }
 .timeline {
   list-style: none;
@@ -938,10 +824,7 @@ section h3.section-subheading-contact {
 .timeline .timeline-body > ul {
   margin-bottom: 0;
 }
-@media (min-width: 768px) {
-  .timeline:before {
-    left: 50%;
-  }
+
   .timeline > li {
     margin-bottom: 100px;
     min-height: 100px;
@@ -969,10 +852,7 @@ section h3.section-subheading-contact {
     padding: 0 30px 20px 20px;
   }
 }
-@media (min-width: 992px) {
-  .timeline > li {
-    min-height: 150px;
-  }
+
   .timeline > li .timeline-panel {
     padding: 0 20px 20px;
   }
@@ -990,10 +870,6 @@ section h3.section-subheading-contact {
     padding: 0 20px 20px;
   }
 }
-@media (min-width: 1200px) {
-  .timeline > li {
-    min-height: 170px;
-  }
   .timeline > li .timeline-panel {
     padding: 0 20px 20px 100px;
   }
@@ -1110,12 +986,12 @@ section#contact {
 }
 
 .well2{
-  margin-top: -5px;
+  margin-top: 15px;
   background-color: #f1deff;
   left: 60%;
   right: 5%;
   width: 400px;
-  padding: 30px 20px 27px 20px;
+  padding: 30px 12px 25px 12px;
   margin-left: 50px;
 }
 
@@ -1123,21 +999,7 @@ section#contact {
   margin-bottom: 30px;
 }
 
-@media only screen and (max-width: 500px) {
-  .well{
-    margin-top: 10px;
-    padding: 0px 10px 1px 15px;
-  }
 
-}
-@media only screen and (max-width: 600px) {
- .modal .modal-1 {
-  width: 90%;
-    height: 36%;
-    margin-top: 50%;
-  }
-
-}
 
 .modal-1 {
    width: 60%;
